# toornament-rs

./: .travis.yml  Cargo.toml  README.md  index.html  print.html
.github/workflows/: ci.yml
book/: book.toml
book/src/: SUMMARY.md
book/src/disciplines/: intro.md  list.md  list_disciplines.md
book/src/misc/: contributing.md  introduction.md
book/src/quickstart/: intro.md
book/src/tournaments/: create.md  create_tournament.md  delete.md  delete_tournament.md  edit.md  intro.md  list_all.md  list_my.md  stages.md  videos.md
book/src/tournaments/matches/: get_game.md  get_game_result.md  get_result.md  intro.md  list_by_discipline.md  list_by_tournament.md  set_game_result.md  set_result.md  update.md  update_game.md
book/src/tournaments/participants/: create.md  create_participant.md  delete.md  delete_participant.md  get.md  get_participants.md  intro.md  list.md  list_participants.md  update_multiple.md  update_single.md
book/src/tournaments/permissions/: change.md  create.md  create_permission.md  get.md  (+6 more)
disciplines/: intro.html  list_disciplines.html
examples/: workflow.rs
external_markdown_tests/: Cargo.toml  build.rs
misc/: contributing.html  introduction.html
quickstart/: intro.html
src/: common.rs  disciplines.rs  endpoints.rs  error.rs  filters.rs  games.rs  info.rs  lib.rs  macroses.rs  matches.rs  opponents.rs  participants.rs  permissions.rs  stages.rs  streams.rs  tournaments.rs  videos.rs
src/iter/: discipline_matches.rs  disciplines.rs  games.rs  mod.rs  participants.rs  permissions.rs  stages.rs  tournament_matches.rs  tournaments.rs  videos.rs
tournaments/: create_tournament.html  delete_tournament.html  edit.html  intro.html  list_all.html  list_my.html  stages.html  videos.html
tournaments/matches/: get_game.html  get_game_result.html  get_result.html  intro.html  list_by_discipline.html  list_by_tournament.html  set_game_result.html  set_result.html  update.html  update_game.html
tournaments/participants/: create_participant.html  delete_participant.html  get_participants.html  intro.html  list_participants.html  update_multiple.html  update_single.html
tournaments/permissions/: change.html  create_permission.html  delete_permission.html  get_permission.html  intro.html  list_permissions.html
