[package]
name = "toornament"
version = "1.1.0"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "Library for Toornament.com the eSports platform"
repository = "https://github.com/vityafx/toornament-rs"
documentation = "https://docs.rs/toornament/"
readme = "README.md"
license = "MIT"
keywords = ["game", "toornament", "tournament", "api", "esport"]
categories = ["api-bindings"]
build = "build.rs"

[badges]
travis-ci = { repository = "vityafx/toornament-rs" }

[dependencies]
hyper = "0.11"
reqwest = "0.8"
log = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
vergen = "0.1"

[workspace]
members = ["external_markdown_tests/"]
