[package]
name = "toornament"
version = "2.2.0"
edition = "2018"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "Library for Toornament.com the eSports platform"
repository = "https://github.com/vityafx/toornament-rs"
documentation = "https://docs.rs/toornament/"
readme = "README.md"
license = "MIT"
keywords = ["game", "toornament", "tournament", "api", "esport"]
categories = ["api-bindings"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.reqwest]
version = "0.11"
features = ["json", "blocking"]

[workspace]
members = ["external_markdown_tests/"]
